--- a/UASignerWpfApp/App.xaml
+++ b/UASignerWpfApp/App.xaml
@@ -11,8 +11,13 @@
             </Setter>
         </Style>
         <Style TargetType="{x:Type TypeName=Label}">
-            <Setter Property="Foreground" Value="DarkGray" />
+            
+            <Setter Property="FontSize" Value="12" />
+        </Style>
+        <Style x:Key="HeaderStyle" TargetType="{x:Type TypeName=Label}">
+            <Setter Property="Background" Value="#FF1E57D1" />
             <Setter Property="FontSize" Value="16" />
+            <Setter Property="Foreground" Value="White"></Setter>
         </Style>
     </Application.Resources>
 </Application>
