--- a/UASignerWpfApp/SubWindows/AddEditProfileWindow.xaml
+++ b/UASignerWpfApp/SubWindows/AddEditProfileWindow.xaml
@@ -1,20 +1,192 @@
 ﻿<Window x:Class=" UASigner.WpfApp.SubWindows.AddEditProfileWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Add/Edit Profile" Height="300" Width="300">
+        Title="Add/Edit Profile" MinHeight="652" Width="394">
 
     <DockPanel>
         <StackPanel Margin="10" DockPanel.Dock="Top">
-        <Label>Type:</Label>
-        <ComboBox Name="ComboBoxEdit_InAccess" SelectionChanged="ComboBoxEdit_InAccess_SelectionChanged">
-        </ComboBox>
-        <WrapPanel Name="DirectoryInfo" Visibility="Hidden">
-            <TextBox Name="NewFolder"></TextBox>
-        </WrapPanel>
+            <DockPanel Margin="0 0 0 20">
+                <Label DockPanel.Dock="Top" Style="{StaticResource HeaderStyle}">Input</Label>
+                <StackPanel DockPanel.Dock="Bottom" Margin="00 2 0 0">
+                    <Grid Margin="0 0 0 0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="100"></ColumnDefinition>
+                            <ColumnDefinition Width="*"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <WrapPanel Grid.Column="0">
+                            <Label Content="Type:"></Label>
+                        </WrapPanel>
+                        <StackPanel Grid.Column="1">
+                            <ComboBox Name="ComboBoxEdit_InAccess" SelectionChanged="ComboBoxEdit_InAccess_SelectionChanged" Margin="0 5 0 5">
+                                <ComboBox.ItemTemplate>
+                                    <DataTemplate>
+                                        <WrapPanel>
+                                            <Label Content="{Binding Path=DispName}">
+                                            </Label>
+                                        </WrapPanel>
+                                    </DataTemplate>
+                                </ComboBox.ItemTemplate>
+                            </ComboBox>
+                        </StackPanel>
+                    </Grid>
+                    <StackPanel Name="wp_DirectoryInfo" Visibility="Collapsed">
+                    <Grid Margin="0 0 0 0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="100"></ColumnDefinition>
+                            <ColumnDefinition Width="*"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"></RowDefinition>
+                            <RowDefinition></RowDefinition>
+                        </Grid.RowDefinitions>
+                            <Label Grid.Column="0" Name="label_NewDirectory" Content="Directory:"></Label>
+                            <TextBox Grid.Column="1" Name="textBox_NewDirectory" VerticalAlignment="Center" Margin="0 5 0 5"></TextBox>
+                            <Label Grid.Row="1" Name="label_NewDirectoryFileMask" Content="FileMask:" Grid.Column="0"></Label>
+                            <TextBox Grid.Row="1"  Grid.Column="1" Name="textBox_NewDirectoryFileMask" VerticalAlignment="Center" Margin="0 5 0 5">.*</TextBox>
+                        </Grid>
+               
+                </StackPanel>
+                <StackPanel Name="wp_FtpPanel" Visibility="Collapsed" VerticalAlignment="Top">
+                    <Grid Margin="0 0 0 0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="100"></ColumnDefinition>
+                            <ColumnDefinition Width="*"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <Label Name="label_NewFtpAddress" Content="FtpAddress:" Grid.Column="0"></Label>
+                        <TextBox Name="textBox_NewFtpAddress" Grid.Column="1"></TextBox>
+                    </Grid>
+                </StackPanel>
+                </StackPanel>
+            </DockPanel>
+            <DockPanel Margin="0 0 0 20">
+                <Label DockPanel.Dock="Top" Style="{StaticResource HeaderStyle}">Output</Label>
+                <StackPanel Name="panel_AddOutput" >
+                    <StackPanel Name="sp_OutProfilesList">
+                        <ListBox Margin="0 5 0 5" Name="listBox_OutProfilesList" MinHeight="20">
+                            <ListBox.ItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Image>
+                                            <Image.Source>
+                                                <BitmapImage UriSource="{Binding Path=Icon}"></BitmapImage>
+                                            </Image.Source>
+                                            <Image.ToolTip>
+                                                <StackPanel>
+                                                    <TextBlock FontWeight="Light" FontSize="10" Margin="0,0,0,5" Text="{Binding Path=ToolTip}">
+                                                    </TextBlock>
+                                                </StackPanel>
+                                            </Image.ToolTip>
+                                        </Image>
 
+                                        <TextBlock Text="{Binding Path=DispName}" />
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ListBox.ItemTemplate>
+                        </ListBox>
+                    </StackPanel>   
+                    <WrapPanel Margin="0 5 0 0 ">
+                        <Button Name="btn_AddOutput" Content="Add output" Click="btn_AddOutputClick">
+                        </Button>
+                    </WrapPanel>
+                    <StackPanel Margin="0 2 0 0" Visibility="Collapsed" Name="panel_AddSingleOutput">
+                        <Grid Margin="0 0 0 0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="100"></ColumnDefinition>
+                                <ColumnDefinition Width="*"></ColumnDefinition>
+                            </Grid.ColumnDefinitions>
+                            <WrapPanel Grid.Column="0">
+                                <Label Content="Type:"></Label>
+                            </WrapPanel>
+                            <StackPanel Grid.Column="1">
+                                <ComboBox Name="comboBoxEdit_OutAccess" SelectionChanged="comboBoxEdit_OutAccess_SelectionChanged"  Margin="0 5 0 5">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <WrapPanel>
+                                                <Label Content="{Binding Path=DispName}">
+                                                </Label>
+                                            </WrapPanel>
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                            </StackPanel>
+                        </Grid>
+                        <StackPanel Name="wp_OutDirectoryInfo" Visibility="Collapsed">
+                                <Grid Margin="0 0 0 0">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="100"></ColumnDefinition>
+                                        <ColumnDefinition Width="*"></ColumnDefinition>
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="*"></RowDefinition>
+                                        <RowDefinition></RowDefinition>
+                                    </Grid.RowDefinitions>
+                                    <Label Grid.Column="0" Name="label_OutNewDirectory" Content="Directory:"></Label>
+                                    <TextBox Grid.Column="1" Name="textBox_OutNewDirectory" VerticalAlignment="Center" Margin="0 5 0 5"></TextBox>
+                                    <Label Grid.Row="1" Name="label_OutNewDirectoryFileMask" Content="FileMask:" Grid.Column="0"></Label>
+                                    <TextBox Grid.Row="1"  Grid.Column="1" Name="textBox_OutNewDirectoryFileMask" VerticalAlignment="Center" Margin="0 5 0 5">.*</TextBox>
+                                </Grid>
 
-       
-    </StackPanel>
+                            </StackPanel>
+                            <StackPanel Name="wp_OutFtpPanel" Visibility="Collapsed" VerticalAlignment="Top">
+                                <Grid Margin="0 0 0 0">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="100"></ColumnDefinition>
+                                        <ColumnDefinition Width="*"></ColumnDefinition>
+                                    </Grid.ColumnDefinitions>
+                                    <Label Name="label_OutNewFtpAddress" Content="FtpAddress:" Grid.Column="0"></Label>
+                                    <TextBox Name="textBox_OutNewFtpAddress" Grid.Column="1" Margin="0 5 0 5"></TextBox>
+                                </Grid>
+                            </StackPanel>
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                            <WrapPanel>
+                                <Button Name="bt_CancelOutProfile" Content="Cancel" Click="btn_CancelOutProfileClick"></Button>
+                            </WrapPanel>
+                            <WrapPanel Margin="5 0 0 0 ">
+                                <Button Name="bt_SaveOutProfile" Content="Save" Click="btn_SavelOutProfileClick"></Button>
+                            </WrapPanel>
+                        </StackPanel>
+                        </StackPanel>
+                    
+                    
+                </StackPanel>
+            </DockPanel>
+            <StackPanel  Margin="0 0 0 20">
+                <StackPanel>
+                    <Label Style="{StaticResource HeaderStyle}">Key select:</Label>
+                    <ListView Name="listView_SelectKeys">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <Border>
+                                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                                        <CheckBox IsChecked="{Binding Selected}" VerticalAlignment="Center"></CheckBox>
+                                        <Label Content="{Binding DispName}" VerticalAlignment="Center"></Label>
+                                    </StackPanel>
+                                </Border>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </StackPanel>
+            </StackPanel>
+            <StackPanel  Margin="0 0 0 20">
+                <StackPanel>
+                    <Label Style="{StaticResource HeaderStyle}">TimeStamp Servers:</Label>
+                    <ListView Name="listView_SelectTsInfo" SelectionMode="Single">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <Border>
+                                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                                        <CheckBox IsChecked="{Binding Selected, Mode=TwoWay}"        
+                                                  VerticalAlignment="Center" Checked="ts_cb_Checked"></CheckBox>
+                                        <Label Content="{Binding DispName}" VerticalAlignment="Center"></Label>
+                                    </StackPanel>
+                                </Border>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </StackPanel>
+            </StackPanel>
+        </StackPanel>
         <Button Click="Button_Click" VerticalAlignment="Bottom" Margin="10 0 10 20">Add</Button>
     </DockPanel>
+
 </Window>
