--- a/UASignerWpfApp/App.xaml
+++ b/UASignerWpfApp/App.xaml
@@ -6,12 +6,28 @@
              Startup="Application_Startup"
              >
     <Application.Resources>
+        <Style x:Key="OkButton"  TargetType="{x:Type TypeName=Button}">
+            <Setter Property="Background">
+                <Setter.Value>
+                    <LinearGradientBrush>
+                        <GradientStop Color="#FF2C912C" Offset="0"/>
+                        <GradientStop Color="#FF509350" Offset="1"/>
+                    </LinearGradientBrush>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="Foreground" Value="White"></Setter>
+            <Setter Property="Padding" Value="10 5 10 5"></Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="Red"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
         <Style TargetType="{x:Type TypeName=Window}">
                <Setter Property="FontFamily" Value="Calibri">
             </Setter>
         </Style>
         <Style TargetType="{x:Type TypeName=Label}">
-            
             <Setter Property="FontSize" Value="12" />
         </Style>
         <Style x:Key="HeaderStyle" TargetType="{x:Type TypeName=Label}">
@@ -19,5 +35,25 @@
             <Setter Property="FontSize" Value="16" />
             <Setter Property="Foreground" Value="White"></Setter>
         </Style>
+        <!--<Style TargetType="{x:Type ComboBoxItem}">
+            <Setter Property="Height" Value="20"></Setter>
+        </Style>-->
+        <Style TargetType="FrameworkElement" x:Key="VisibleAnimation">
+            <Setter Property="Visibility" Value="Collapsed"/>
+            <Setter Property="Opacity" Value="0"/>
+            <Style.Triggers>
+                <Trigger Property="Visibility" Value="Visible">
+                    <Trigger.EnterActions>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <DoubleAnimation Storyboard.TargetProperty="Opacity"
+                             From="0.0" To="1.0" Duration="0:0:0.2"/>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </Trigger.EnterActions>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
     </Application.Resources>
 </Application>
