--- a/UASignerWpfApp/App.xaml
+++ b/UASignerWpfApp/App.xaml
@@ -48,6 +48,37 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
+        <Style x:Key="ShowCertsButton"  TargetType="{x:Type TypeName=Button}">
+            <Setter Property="Foreground" Value="White"></Setter>
+            <Setter Property="BorderBrush">
+                <Setter.Value>
+                    <ImageBrush ImageSource="Resources/Images/cert_ico.png">
+                    </ImageBrush>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="Opacity" Value="0.9">
+
+            </Setter>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding BorderBrush}" Opacity="{TemplateBinding Opacity}"  BorderBrush="LightGray" Height="16" Width="16"></Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <!--<Setter Property="BorderBrush" >
+                        <Setter.Value>
+                            <ImageBrush ImageSource="Resources/Images/folder_ico.png"/>  
+                        </Setter.Value>
+                    </Setter>-->
+                    <Setter Property="Cursor" Value="Hand"></Setter>
+                    <Setter Property="Opacity" Value="1"></Setter>
+
+                </Trigger>
+            </Style.Triggers>
+        </Style>
         <Style x:Key="OkButton"  TargetType="{x:Type TypeName=Button}">
             <Setter Property="Foreground" Value="White"></Setter>
             <Setter Property="Background" >
