--- a/UASignerWpfApp/View/EditRootFolder.xaml
+++ b/UASignerWpfApp/View/EditRootFolder.xaml
@@ -1,7 +1,11 @@
 ﻿<Window x:Class="UASigner.WpfApp.View.EditRootFolder"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="EditRootFolder" Height="150" Width="500">
+        xmlns:controls="clr-namespace:UASigner.WpfApp.Controls"
+        Title="EditRootFolder" MinHeight="150" MaxHeight="400"  Width="500"  SizeToContent="Height"> 
+    <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BoolToVis" />
+    </Window.Resources>
     <DockPanel Margin="5">
         <StackPanel  DockPanel.Dock="Top" Orientation="Vertical"  Margin="0 5 0 10">
             <Grid Margin="0 0 0 0">
@@ -18,16 +22,25 @@
                     <TextBox VerticalAlignment="Center" Text="{Binding RootFolder.RootPath, ValidatesOnNotifyDataErrors=True}" 
                                                  Validation.ErrorTemplate="{StaticResource validationErrorTemplate}"></TextBox>
                     <WrapPanel HorizontalAlignment="Right" >
+
+                        <Button HorizontalAlignment="Right"   Style="{StaticResource ShowCertsButton}"  Command="{Binding ShowCerts}" CommandParameter="InLocationAccess"
+                                Margin="5"
+                                ></Button>
                         <Button HorizontalAlignment="Right" Style="{StaticResource ShowFolderButton}" Command="{Binding FolderOpen}" CommandParameter="InLocationAccess"></Button>
                     </WrapPanel>
                 </StackPanel>
             </Grid>
+            <StackPanel Visibility="{Binding Path=ShowCertList, Converter={StaticResource BoolToVis}}" Style="{StaticResource VisibleAnimation}">
+                <controls:CertViewer CertificateCollection="{Binding FetchedCerts,UpdateSourceTrigger=PropertyChanged}" Test="{Binding RootFolder.RootPath, UpdateSourceTrigger=PropertyChanged}">
+                    
+                </controls:CertViewer>
+            </StackPanel>
         </StackPanel>
         <StackPanel DockPanel.Dock="Bottom">
             <StackPanel>
                 <Rectangle HorizontalAlignment="Stretch" Fill="LightGray" Height="1"/>
                 <DockPanel>
-                    <WrapPanel HorizontalAlignment="Right">
+                    <WrapPanel HorizontalAlignment="Right" Margin="0 0 0 10">
                         <Button Content="Cancel" Margin="0 14 7 0"  Style="{StaticResource LinkButton}" Command="{Binding Cancel}" CommandParameter="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"></Button>
                         <Button Content="Save" Margin="0 5 0 0" Style="{StaticResource OkButton}" Command="{Binding Save}" CommandParameter="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"></Button>
                     </WrapPanel>
